Add update handler for infinitybottles
