# docs/swagger.yaml
@@ -65,6 +65,8 @@ definitions:
     properties:
       bottleName:
         type: string
+      emptyStart:
+        type: boolean
     type: object
 info:
   contact: {}
@@ -188,6 +190,39 @@ paths:
       summary: Basic healthcheck
       tags:
       - healthcheck
+  /v1/infinitybottle/{id}:
+    put:
+      description: Update all information about an infinity bottle by ID
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update to an infinity bottle
+        in: body
+        name: InfinityBottle
+        required: true
+        schema:
+          $ref: '#/definitions/main.InfinityBottlePost'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/data.InfinityBottle'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/main.ErrorMessage'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.ErrorMessage'
+      summary: Update an infinity bottle by ID
+      tags:
+      - infinityBottle
   /v1/infinitybottles:
     post:
       consumes:
